--- a/openshift/addon-operator/apnp-test-required-params/.test-fixtures/namespace-n/deployment.yaml
+++ b/openshift/addon-operator/apnp-test-required-params/.test-fixtures/namespace-n/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: "test-name"
-  namespace: apnp-test-required-params
+  namespace: default
   labels:
     app.kubernetes.io/name: nginx
     app.kubernetes.io/instance: "test-name"
