Use compact .config.addonsv1 structure in templates

--- a/openshift/addon-operator/apnp-test-required-params/manifest.yaml
+++ b/openshift/addon-operator/apnp-test-required-params/manifest.yaml
@@ -25,27 +25,21 @@ spec:
     openAPIV3Schema:
       type: object
       properties:
-        addons:
+        addonsv1:
           type: object
           description: "contains configuration passed by Addon Operator"
           properties:
-            v1alpha1:
-              type: object
-              description: "contains configuration for addons.managed.openshift.io/v1alpha1"
-              properties:
-                deadMansSnitchUrl:
-                  type: string
-                  description: "Dead Man's Snitch URL"
-                pagerDutyKey:
-                  type: string
-                  description: "PagerDuty API key"
-              required:
-                - deadMansSnitchUrl
-                - pagerDutyKey
+            deadMansSnitchUrl:
+              type: string
+              description: "Dead Man's Snitch URL"
+            pagerDutyKey:
+              type: string
+              description: "PagerDuty API key"
           required:
-            - v1alpha1
+            - deadMansSnitchUrl
+            - pagerDutyKey
       required:
-        - addons
+        - addonsv1
 test:
   template:
   - name: namespace-n
@@ -54,10 +48,9 @@ test:
         metadata:
           name: test-name
       config:
-        addons:
-          v1alpha1:
-            deadMansSnitchUrl: https://example.com/test-snitch-url
-            pagerDutyKey: 1a2b3c4d5e6f
+        addonsv1:
+          deadMansSnitchUrl: https://example.com/test-snitch-url
+          pagerDutyKey: 1a2b3c4d5e6f
   - name: namespace-y
     context:
       package:
@@ -65,7 +58,6 @@ test:
           name: test-name
           namespace: test-namespace
       config:
-        addons:
-          v1alpha1:
-            deadMansSnitchUrl: https://example.com/test-snitch-url
-            pagerDutyKey: 1a2b3c4d5e6f
+        addonsv1:
+          deadMansSnitchUrl: https://example.com/test-snitch-url
+          pagerDutyKey: 1a2b3c4d5e6f
