--- a/openshift/addon-operator/apnp-test-required-params/.test-fixtures/namespace-y/deployment.yaml
+++ b/openshift/addon-operator/apnp-test-required-params/.test-fixtures/namespace-y/deployment.yaml
@@ -26,7 +26,15 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: MY_SNITCH_URL
+            - name: MY_ADDON_PARAMETERS
+              value: '{"param1":"hey","param2":420}'
+            - name: MY_CLUSTER_ID
+              value: "ABCD1234"
+            - name: MY_DEAD_MANS_SNITCH_URL
               value: "https://example.com/test-snitch-url"
+            - name: MY_OCM_CLUSTER_ID
+              value: "EFGH5678"
             - name: MY_PAGERDUTY_KEY
               value: "1a2b3c4d5e6f"
+            - name: MY_TARGET_NAMESPACE
+              value: "test-namespace"
