Re-add ocmClusterID to required params

--- a/openshift/addon-operator/apnp-test-required-params/manifest.yaml
+++ b/openshift/addon-operator/apnp-test-required-params/manifest.yaml
@@ -52,6 +52,7 @@ spec:
             - parameters
             - clusterID
             - deadMansSnitchUrl
+            - ocmClusterID
             - pagerDutyKey
             - targetNamespace
       required:
