--- a/openshift/addon-operator/apnp-test-required-params/manifest.yaml
+++ b/openshift/addon-operator/apnp-test-required-params/manifest.yaml
@@ -42,6 +42,9 @@ spec:
             ocmClusterID:
               type: string
               description: "OCM Cluster ID"
+            ocmClusterName:
+              type: string
+              description: "OCM Cluster Name"
             pagerDutyKey:
               type: string
               description: "PagerDuty API key"
@@ -53,6 +56,7 @@ spec:
             - clusterID
             - deadMansSnitchUrl
             - ocmClusterID
+            - ocmClusterName
             - pagerDutyKey
             - targetNamespace
       required:
@@ -69,6 +73,7 @@ test:
           clusterID: ABCD1234
           deadMansSnitchUrl: https://example.com/test-snitch-url
           ocmClusterID: EFGH5678
+          ocmClusterName: test-ocm-cluster
           pagerDutyKey: 1a2b3c4d5e6f
           parameters:
             param1: hey
@@ -85,6 +90,7 @@ test:
           clusterID: ABCD1234
           deadMansSnitchUrl: https://example.com/test-snitch-url
           ocmClusterID: EFGH5678
+          ocmClusterName: test-ocm-cluster
           pagerDutyKey: 1a2b3c4d5e6f
           parameters:
             param1: hey
