--- a/openshift/addon-operator/apnp-test-optional-params/.test-fixtures/namespace-n-config-y/deployment.yaml
+++ b/openshift/addon-operator/apnp-test-optional-params/.test-fixtures/namespace-n-config-y/deployment.yaml
@@ -32,6 +32,8 @@ spec:
               value: "https://example.com/test-snitch-url"
             - name: MY_OCM_CLUSTER_ID
               value: "EFGH5678"
+            - name: MY_OCM_CLUSTER_NAME
+              value: "test-ocm-cluster"
             - name: MY_PAGERDUTY_KEY
               value: "1a2b3c4d5e6f"
             - name: MY_PARAMETERS
