Add .smtp parameter for SendGrid

--- a/openshift/addon-operator/apnp-test-optional-params/.test-fixtures/namespace-n-config-p/deployment.yaml
+++ b/openshift/addon-operator/apnp-test-optional-params/.test-fixtures/namespace-n-config-p/deployment.yaml
@@ -38,5 +38,7 @@ spec:
               value: ""
             - name: MY_PARAMETERS
               value: ''
+            - name: MY_SMTP
+              value: ''
             - name: MY_TARGET_NAMESPACE
               value: "default"
