--- a/openshift/addon-operator/apnp-test-optional-params/manifest.yaml
+++ b/openshift/addon-operator/apnp-test-optional-params/manifest.yaml
@@ -48,6 +48,10 @@ spec:
               type: object
               description: "Addon Parameters"
               x-kubernetes-preserve-unknown-fields: true
+            smtp:
+              type: object
+              description: "SendGrid Configuration"
+              x-kubernetes-preserve-unknown-fields: true
             targetNamespace:
               type: string
               description: "Target Namespace"
@@ -84,6 +88,12 @@ test:
           parameters:
             param1: hey
             param2: 420
+          smtp:
+            host: clusterID
+            password: pwd
+            port: "1111"
+            tls: "true"
+            username: user
           targetNamespace: default
   - name: namespace-y-config-n
     context:
@@ -119,4 +129,10 @@ test:
           parameters:
             param1: hey
             param2: 420
+          smtp:
+            host: clusterID
+            password: pwd
+            port: "1111"
+            tls: "true"
+            username: user
           targetNamespace: test-namespace
